// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sophisticated Integration conditional union selections 1`] = `
Object {
  "data": Object {
    "deities": Array [
      Object {
        "__typename": "God",
        "lifespan": "Immortal",
        "name": "Morpheus",
      },
      Object {
        "__typename": "Deity_Titan",
        "name": "Cronos",
      },
    ],
  },
}
`;

exports[`Sophisticated Integration union type names 1`] = `
Object {
  "data": Object {
    "deities": Array [
      Object {
        "__typename": "God",
      },
      Object {
        "__typename": "Deity_Titan",
      },
    ],
  },
}
`;
